apperently missed there was both a mobile and non mobile version, jest tests also fixed

--- a/packages/terra-time-input/src/TimeInput.module.scss
+++ b/packages/terra-time-input/src/TimeInput.module.scss
@@ -277,6 +277,46 @@
       line-height: var(--terra-time-input-mobile-line-height, 1.429);
       margin-top: var(--terra-time-input-time-mobile-spacer-margin-top, 0.3571428571rem);
     }
+
+    &.is-invalid {
+      background-color: #fff;
+      border: 1px solid #e50000;
+      box-shadow: 0 0 0 1px #e50000;
+
+      &:hover {
+        border: 1px solid #e50000;
+      }
+
+      &:focus {
+        border: 1px solid #e50000;
+      }
+
+      &.disabled {
+        background-color: rgba(111, 116, 119, 0.2);
+        border: 1px solid #e50000;
+        color: #1c1f21;
+        opacity: 0.25;
+      }
+    }
+
+    &.is-incomplete {
+      background-color: #ffc;
+
+      &:hover {
+        background-color: #ffc;
+      }
+
+      &:focus {
+        background-color: #ffc;
+      }
+
+      &.disabled {
+        background-color: #ffc;
+        border: 1px solid #868a8c;
+        color: #1c1f21;
+        opacity: 0.25;
+      }
+    }
   }
 
   .meridiem-button-group {
